--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ packages = find:
 python_requires = >=3.7
 install_requires =
 		scanpy>=1.7.2
-		torch>=1.7.0
+		torch>=1.7.0+cu111
 		plotly>=5.3.1
 		plotnine>=0.8.0
 [options.packages.find]
