--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = deepcolor
-version=0.0.4
+version=0.0.5
 author = Kojima Yasuhiro
 author_email = kojima.yasuhiro@med.nagoya-u.ac.jp
 description = Analyze colocalization patterns between single cell gene expression profiles.
@@ -22,7 +22,7 @@ install_requires =
 		scanpy>=1.7.2
 		torch>=1.7.0+cu111
 		plotly>=5.3.1
+		matplotlib<=3.5.3
 		plotnine>=0.8.0
-		imgaug<0.2.
 [options.packages.find]
 where = src
