update for 0.0.6 (add batch effect removal for VAE)

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = deepcolor
-version=0.0.5
+version=0.0.6
 author = Kojima Yasuhiro
-author_email = kojima.yasuhiro@med.nagoya-u.ac.jp
+author_email = tiisaishima@gmail.com
 description = Analyze colocalization patterns between single cell gene expression profiles.
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -20,9 +20,9 @@ packages = find:
 python_requires = >=3.7
 install_requires =
 		scanpy>=1.7.2
-		torch>=1.7.0+cu111
+		torch>=1.7.0
 		plotly>=5.3.1
-		matplotlib<=3.5.3
+		matplotlib<=3.6.3
 		plotnine>=0.8.0
 [options.packages.find]
 where = src
